--- a/main.css
+++ b/main.css
@@ -152,8 +152,6 @@ header{
     z-index: -1;
 }
 
-
-
 .entre_paginas{
     width: 100%;
     height: 3em;
@@ -224,7 +222,7 @@ header{
     color: black;
 }
 .cinza_claro{
-    background-color: rgb(207, 189, 189);
+    background-color: rgb(185, 185, 185);
 }
 .container_contatos{
     text-align: center;
@@ -340,4 +338,101 @@ footer{
 
 .hide{
     display: none;
+}
+.hide_mobile{
+    display: none;
+}
+
+@media screen and (min-width: 560px){
+    .show_desktop{
+        display:block;
+    }
+
+    .hide_desktop{
+        display: none;
+    }
+
+    .nav_desk{
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .item_nvbar{
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+    /*capa*/
+    .pagina_principal{
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        flex-direction: column;
+    }
+    .down{
+        width: 100%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10em;
+    }
+    /*coisas legais*/
+    .container_projetos{
+        margin-top: -14em;
+        text-align: center;
+        padding-bottom: 2em;
+    }
+    
+    .coisas_legais{
+        margin-top: 2em;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+    }
+    
+    .cl_content{
+        width: auto;
+        height: auto;
+        display: flex;
+        align-items: center;
+        margin: 0;
+        padding: 1.5em;
+        background-color: rgb(161, 161, 161);
+    }
+
+    .cl_content:hover{
+        background-color: rgb(230, 230, 230);
+        margin-left: -.5em;
+        margin-right: -.5em;
+        padding-left: 2em;
+        padding-right: 2em;
+        opacity: 1;
+        box-shadow: 3px -1px 43px -12px rgba(0,0,0,0.75);
+    }
+
+    .pequeno{
+        width: 30%;
+        height: auto;
+    }
+
+    /*.contatos*/
+    .entre_paginas{
+        width: 100%;
+        height: 3em;
+    }
+
+    .complemento{
+        position: absolute;
+        top:0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 1em;
+    }
+
+    .grade{
+        border-bottom: 10px solid red;
+        border-right: 10px solid transparent;
+    }
 }
